# hermes-comic

./: .env.example  .gitignore  DEMO_RECORDING_SCRIPT.md  IMPLEMENTATION_SPRINT.md  README.md  RECORDING_TODAY.md  pyproject.toml
hermes_comic/: __init__.py  agent_runner.py  canon.py  cli.py  composer.py  continuity.py  cover.py  flux_client.py  kimi_client.py  panel_generator.py  plot_twist.py  prompts.py  propose.py  publish.py  style.py  style_evolve.py
scripts/: bootstrap_env.sh  gate_regen.py  gate_six_panels.py  gen_references.py  install_skill.sh  link_skill.sh  pick_ref.sh  probe_slash.py  regen_panel.py  smoke_auto.sh  smoke_fal_basic.py  smoke_fal_multi.py  smoke_fal_single.py  smoke_hermes.py  smoke_kimi.py  smoke_neon_ash_ch1.sh  smoke_neon_ash_full.sh  smoke_phase1.sh  smoke_phase2.sh  smoke_phase3.sh  test_autoload.sh  test_cover.sh  test_deploy.sh  test_dual_deploy.sh  test_full_flow.sh  test_publish.sh  test_styled_render.py  upload_lora.py  verify_flags.sh  verify_hermes_import.py
skills/comic-series/: SKILL.md
skills/comic-series/scripts/: continuity_guard.py  plot_twist.py  style_evolve.py
